--- a/blackboard/apps/http-backend/package.json
+++ b/blackboard/apps/http-backend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common":"workspace:*",
+    "@repo/common":"workspace:*",
     "@types/express": "^5.0.1",
-    "express": "^5.1.0"
+    "@types/jsonwebtoken": "^9.0.9",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "keywords": [],
   "author": "",
