--- a/blackboard/apps/ws-backend/package.json
+++ b/blackboard/apps/ws-backend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common":"workspace:*",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.1",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.1"
   },
   "keywords": [],
