--- a/blackboard/package.json
+++ b/blackboard/package.json
@@ -1,6 +1,9 @@
 {
   "name": "blackboard",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
